--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,38 @@ code {
    color:white;
    font-size:28px;
 }
+
+.mid {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+.mid video {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.main-title {
+  text-align: center;
+  font-family: 'Crafty Girls', cursive;
+  font-size: 55px;
+  color: white;
+}
+
+.main-title1 {
+  font-size: 50px;
+  text-align: center;
+  color: white;
+  font-family: 'Fredericka the Great', cursive;
+}
